# glfw-hpp

./: CMakeLists.txt  README.md  api.yaml  generate.py
cmake/: glfw-hpp-config.cmake.in
include/glfw-hpp/: glfw.cppm  glfw.hpp  glfw_c.cppm
